--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
 
 h1 {
   font-family: 'Pacifico', cursive;
-  font-size: 3rem;
+  font-size: 2.8rem;
   margin-bottom: 10px;
 }
 
@@ -42,24 +42,39 @@ p {
 }
 
 button {
-  margin-top: 25px;
-  padding: 15px 35px;
+  margin-top: 20px;
+  padding: 14px 30px;
   font-size: 1.1rem;
   border: none;
   border-radius: 30px;
   background: white;
   color: #ff4f7b;
   cursor: pointer;
-  transition: transform 0.2s, box-shadow 0.2s;
+  transition: 0.2s;
 }
 
 button:hover {
   transform: scale(1.05);
-  box-shadow: 0 10px 20px rgba(0,0,0,0.2);
 }
 
 .hidden {
   display: none;
+}
+
+/* Photos */
+.photos {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin: 20px 0;
+}
+
+.photos img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid white;
 }
 
 /* Hearts */
@@ -72,53 +87,68 @@ button:hover {
 }
 
 @keyframes floatUp {
-  0% {
+  from {
     transform: translateY(0) scale(1);
     opacity: 1;
   }
-  100% {
+  to {
     transform: translateY(-120vh) scale(1.5);
     opacity: 0;
   }
+}
+
+/* NO button */
+.no-btn {
+  position: absolute;
 }
 </style>
 </head>
 
 <body>
 
+<!-- PAGE 1 -->
 <div class="container" id="page1">
-  <h1>Hey Love ❤️</h1>
+  <h1>Hey My Beautiful ❤️</h1>
   <p>
-    I built this little website just for you.<br>
-    Because you deserve something special… always.
+    I made this just for you, <strong>ANJALI</strong> 💕<br>
+    Because you mean the world to me.
   </p>
-  <button onclick="nextPage()">Tap to Continue 💕</button>
+  <button onclick="nextPage()">Tap to Continue 💖</button>
 </div>
 
+<!-- PAGE 2 -->
 <div class="container hidden" id="page2">
-  <h1>You Mean So Much 💖</h1>
+  <h1>Us 💑</h1>
+
+  <div class="photos">
+    <img src="me.jpg" alt="Me">
+    <img src="her.jpg" alt="Her">
+  </div>
+
   <p>
-    Every smile of yours makes my world brighter.<br>
-    Every moment with you feels like magic.
+    Every moment with you feels special.<br>
+    And I want many more with you 💫
   </p>
-  <button onclick="nextPage()">One More Thing 🌹</button>
+  <button onclick="nextPage()">One Last Question 💌</button>
 </div>
 
+<!-- PAGE 3 -->
 <div class="container hidden" id="page3">
-  <h1>So I Have a Question… 💌</h1>
-  <p style="font-size:1.4rem; margin-top:20px;">
-    Will you be my Valentine? 💕
-  </p>
+  <h1>So, Anjali… 💖</h1>
+  <p style="font-size:1.4rem;">Will you be my Valentine?</p>
+
   <button onclick="sayYes()">YES 😍</button>
+  <button class="no-btn" onmouseover="runAway()">NO 🙈</button>
 </div>
 
+<!-- PAGE 4 -->
 <div class="container hidden" id="page4">
   <h1>YAYYYYY 💘</h1>
   <p>
-    You just made me the happiest person alive 💖<br>
-    I love you more than words can say.
+    I knew it 😌💕<br>
+    You just made my heart so happy.
   </p>
-  <p style="margin-top:15px;">Forever yours 💍</p>
+  <p>Forever yours 💍</p>
 </div>
 
 <script>
@@ -132,7 +162,7 @@ function nextPage() {
 
 function sayYes() {
   nextPage();
-  setInterval(createHeart, 300);
+  setInterval(createHeart, 250);
 }
 
 function createHeart() {
@@ -143,9 +173,15 @@ function createHeart() {
   heart.style.animationDuration = 4 + Math.random() * 3 + 's';
   document.body.appendChild(heart);
 
-  setTimeout(() => {
-    heart.remove();
-  }, 7000);
+  setTimeout(() => heart.remove(), 7000);
+}
+
+function runAway() {
+  const btn = document.querySelector('.no-btn');
+  const x = Math.random() * (window.innerWidth - 100);
+  const y = Math.random() * (window.innerHeight - 50);
+  btn.style.left = x + 'px';
+  btn.style.top = y + 'px';
 }
 </script>
 
