--- a/index.html
+++ b/index.html
@@ -187,3 +187,192 @@ function runAway() {
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>For My Valentine ❤️</title>
+
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;500&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  height: 100vh;
+  background: linear-gradient(135deg, #ff758c, #ff7eb3);
+  font-family: 'Poppins', sans-serif;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.container {
+  text-align: center;
+  padding: 30px;
+  max-width: 500px;
+}
+
+h1 {
+  font-family: 'Pacifico', cursive;
+  font-size: 2.8rem;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 1.2rem;
+  line-height: 1.6;
+}
+
+button {
+  margin-top: 20px;
+  padding: 14px 30px;
+  font-size: 1.1rem;
+  border: none;
+  border-radius: 30px;
+  background: white;
+  color: #ff4f7b;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+button:hover {
+  transform: scale(1.05);
+}
+
+.hidden {
+  display: none;
+}
+
+/* Photos */
+.photos {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin: 20px 0;
+}
+
+.photos img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid white;
+}
+
+/* Hearts */
+.heart {
+  position: absolute;
+  bottom: -20px;
+  font-size: 24px;
+  animation: floatUp 6s linear infinite;
+  opacity: 0.8;
+}
+
+@keyframes floatUp {
+  from {
+    transform: translateY(0) scale(1);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-120vh) scale(1.5);
+    opacity: 0;
+  }
+}
+
+/* NO button */
+.no-btn {
+  position: absolute;
+}
+</style>
+</head>
+
+<body>
+
+<!-- PAGE 1 -->
+<div class="container" id="page1">
+  <h1>Hey My Beautiful ❤️</h1>
+  <p>
+    I made this just for you, <strong>ANJALI</strong> 💕<br>
+    Because you mean the world to me.
+  </p>
+  <button onclick="nextPage()">Tap to Continue 💖</button>
+</div>
+
+<!-- PAGE 2 -->
+<div class="container hidden" id="page2">
+  <h1>Us 💑</h1>
+
+  <div class="photos">
+    <img src="me.jpg" alt="Me">
+    <img src="her.jpg" alt="Her">
+  </div>
+
+  <p>
+    Every moment with you feels special.<br>
+    And I want many more with you 💫
+  </p>
+  <button onclick="nextPage()">One Last Question 💌</button>
+</div>
+
+<!-- PAGE 3 -->
+<div class="container hidden" id="page3">
+  <h1>So, Anjali… 💖</h1>
+  <p style="font-size:1.4rem;">Will you be my Valentine?</p>
+
+  <button onclick="sayYes()">YES 😍</button>
+  <button class="no-btn" onmouseover="runAway()">NO 🙈</button>
+</div>
+
+<!-- PAGE 4 -->
+<div class="container hidden" id="page4">
+  <h1>YAYYYYY 💘</h1>
+  <p>
+    I knew it 😌💕<br>
+    You just made my heart so happy.
+  </p>
+  <p>Forever yours 💍</p>
+</div>
+
+<script>
+let currentPage = 1;
+
+function nextPage() {
+  document.getElementById(`page${currentPage}`).classList.add('hidden');
+  currentPage++;
+  document.getElementById(`page${currentPage}`).classList.remove('hidden');
+}
+
+function sayYes() {
+  nextPage();
+  setInterval(createHeart, 250);
+}
+
+function createHeart() {
+  const heart = document.createElement('div');
+  heart.className = 'heart';
+  heart.innerHTML = '❤️';
+  heart.style.left = Math.random() * 100 + 'vw';
+  heart.style.animationDuration = 4 + Math.random() * 3 + 's';
+  document.body.appendChild(heart);
+
+  setTimeout(() => heart.remove(), 7000);
+}
+
+function runAway() {
+  const btn = document.querySelector('.no-btn');
+  const x = Math.random() * (window.innerWidth - 100);
+  const y = Math.random() * (window.innerHeight - 50);
+  btn.style.left = x + 'px';
+  btn.style.top = y + 'px';
+}
+</script>
+
+</body>
+</html>
