--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@ button:hover {
 
 <!-- PAGE 1 -->
 <div class="container" id="page1">
-  <h1>Hey My Beautiful ❤️</h1>
+  <h1>Hello My Kutty😁😘❤️</h1>
   <p>
-    I made this just for you, <strong>ANJALI</strong> 💕<br>
+    I made this just for you, <strong>Prashansa</strong> 💕<br>
     Because you mean the world to me.
   </p>
   <button onclick="nextPage()">Tap to Continue 💖</button>
@@ -134,7 +134,7 @@ button:hover {
 
 <!-- PAGE 3 -->
 <div class="container hidden" id="page3">
-  <h1>So, Anjali… 💖</h1>
+  <h1>So, Prashansa… 💖</h1>
   <p style="font-size:1.4rem;">Will you be my Valentine?</p>
 
   <button onclick="sayYes()">YES 😍</button>
@@ -299,7 +299,7 @@ button:hover {
 <div class="container" id="page1">
   <h1>Hey My Beautiful ❤️</h1>
   <p>
-    I made this just for you, <strong>ANJALI</strong> 💕<br>
+    I made this just for you, <strong>Prashansa</strong> 💕<br>
     Because you mean the world to me.
   </p>
   <button onclick="nextPage()">Tap to Continue 💖</button>
@@ -323,7 +323,7 @@ button:hover {
 
 <!-- PAGE 3 -->
 <div class="container hidden" id="page3">
-  <h1>So, Anjali… 💖</h1>
+  <h1>So, Prashansa… 💖</h1>
   <p style="font-size:1.4rem;">Will you be my Valentine?</p>
 
   <button onclick="sayYes()">YES 😍</button>
@@ -376,3 +376,4 @@ function runAway() {
 
 </body>
 </html>
+
